2012-08-31  Jon Lee  <jonlee@apple.com>

        ondisplay event handlers are not called
        https://bugs.webkit.org/show_bug.cgi?id=95263
        <rdar://problem/12193359>

        Reviewed by Alexey Proskuryakov.

        Adjust the test to use the ondisplay handler, to fully test legacy API.

        * http/tests/notifications/legacy/show-expected.txt: Verify that event listener for ondisplay is
        the same as that for onshow.
        * http/tests/notifications/legacy/show.html:

2012-08-31  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Adding passing test results for fast/canvas/canvas-strokeRect-alpha-shadow.
        Test passes on Windows port now but Mac port currently uses expected failing results.

        * platform/win/fast/canvas/canvas-strokeRect-alpha-shadow-expected.txt: Added.

2012-08-31  Philip Rogers  <pdr@google.com>

        Unreviewed update of fast/js/function-apply-aliased.html expectations.

        fast/js/function-apply-aliased.html has been failing for TEXT for some time but
        the chromium-mac TestExpectations did not have an entry for mac. This patch
        updates the expectations to include all platforms.

        The bug (crbug.com/48239) has been updated to reflect this.

        * platform/chromium/TestExpectations:

2012-08-31  Jessie Berlin  <jberlin@apple.com>

        LayoutTests/http/tests/websocket/tests/hixie76/frame-lengths.html was removed. Remove it from the Skipped list.

        * platform/mac-wk2/Skipped:
        * platform/qt-arm/Skipped:
        * platform/wincairo/Skipped:

2012-08-31  Jessie Berlin  <jberlin@apple.com>

        compositing/tiling/huge-layer* flakey
        https://bugs.webkit.org/show_bug.cgi?id=48454

        These tests were disabled in r89631. Remove them from the Skipped list so that
        run-webkit-tests doesn't try to find them.

        * platform/win/Skipped:
        * platform/wincairo/Skipped:
        * platform/wk2/Skipped:
